single price grid complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="container">
     <div class="card">
       <section class="up">
-        <div class="up-cardgit ">
+        <div class="up-card">
           <h1>Join our community</h1>
           <h3>30-day, hassle-free money back guarantee</h3>
           <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
